<resources>
    <string name="app_name">enteresan gif</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unf_list">UnfListActivity</string>
    <string name="title_activity_follow_back">FollowBackActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-4443948134096736/8698367203</string>
    <string name="app_header">Unfollowers App</string>
    <string name="followers">Followers </string>
    <string name="following">Following </string>
    <string name="unfollowers">Unfollowers </string>
    <string name="unfollowing">Unfollowing </string>
    <string name="login">Login</string>
    <string name="show_unfollowers">Show Unfollowers</string>
    <string name="show_unfollowing">Show Unfolowing</string>
    <string name="follow_back_header">People Follows You and You Not Follow</string>
    <string name="more">More</string>
    <string name="unf_header">People You Follow But Not Follow You</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="shoult_login">You Should login Before</string>
    <string name="no_unfollowers">You have no unfollowers</string>
    <string name="no_following">You have no  any unfollowing users</string>
    <string name="logout">Logout</string>
    <string name="loading">loading...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="mention_followers">Mention followers</string>
    <string name="mention_following">Mention Following</string>
    <string name="mention_users">Mention Users</string>
    <string name="send_mention">Send Mention</string>
    <string name="enter_text">Please enter text before mention</string>
    <string name="short_of_140">Please enter a short text of 140 characters</string>
    <string name="title_activity_make_mention">MakeMentionActivity</string>
    <string name="title_activity_make_hash_tag_tweet">MakeHashTagTweetActivity</string>
    <string name="quick_tweet">Quick Tweet</string>
    <string name="clear_tweet">Clear Tweet</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title_activity_clear_tweet">ClearTweetActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search and follow</string>
    <string name="title_activity_search_mention">SearchMentionActivity</string>
    <string name="search_mention">search mention</string>
    <string name="title_activity_direct_message">DirectMessageActivity</string>
    <string name="Delete">delete</string>
    <string name="mention_hint">Write text for mention</string>
    <string name="enter_hashtah_for_users">Enter hash tag for take users</string>
    <string name="enter_hash_for_mentioned_users">Enter hashtag for mentioned users</string>
    <string name="add">Add</string>
    <string name="search_and_mention">Search And Mention</string>
    <string name="clear_Seperatealy">Clear one by one</string>
    <string name="clear_all">Clear All</string>
    <string name="limit_asim"> limit exceeded you have to wait for a while .</string>
    <string name="title_activity_select_country">SelectCountry</string>
    <string name="sleect_country">Select your country for trending topics</string>
    <string name="check_internet_connection">please check your internet connection</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.umutkina.ydshazirlikpro</string>
    <string-array name="sabahattin_ali">
        <item>#sabahattinali</item>
        <item>Sabahattin Ali</item>
        <item>Turgut Uyar</item>


    </string-array>
    <string-array name="hashtag_list_T_uyar">
        <item>#turgutuyar</item>
        <item>Turgut Uyar</item>
        <item>Göğe Bakalım</item>
        <item>Sabahattin Ali</item>
        <item>Umay Umay</item>
        <item>Birhan Keskin</item>
        <item>Oğuz Atay</item>
        <item>tutunamayanlar</item>
        <item>Nazım Hikmet</item>
        <item>Attila İlhan</item>


        </string-array>
    <string-array name="ingilizce_hashtag_list">
        <item>#YDS #Kelime </item>
        <item>#YDS #ingilizce </item>
        <item>#ingilizce #Kelime </item>
        <item>#ezber #Kelime </item>
        <item>#ingilizce </item>
    </string-array>
    <string-array name="hashtag_list">
        


        <item>#edebiyat</item>
        <item>#kitap</item>
        <item>#şiir</item>
        <item>#şiirsokakta</item>
        <item>cemal süreya</item>
        <item> cahit zarifoğlu</item>
        <item>erdem bayazıt</item>
        <item>didem madak</item>
        <item>behcet necaatigil</item>
        <item>özdemir asaf</item>
        <item>şair nigar</item>
        <item>necip fazıl kürek</item>
        <item>asaf halet çelebi</item>
        <item>can dündar</item>
        <item>can yücel</item>
        <item>nazım hikmet</item>
        <item>turgut uyar</item>
        <item>necip fazıl</item>
        <item>birhan keskin</item>
        <item>kahraman tazeoğlu</item>
        <item>ibrahim tenekeci</item>
        <item>elif şafak</item>
        <item>orhan pamuk</item>
        <item>kemal sayar</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        

        
        
        
        
    </string-array>
</resources>