<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    tools:context="com.umutkina.findunfollowersapp.FollowBackActivity">
    <TextView
        android:id="@+id/tv_header"
        android:background="#26517C"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        android:text="@string/follow_back_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:layout_below="@+id/tv_header"
        android:id="@+id/lv_tweets"
        android:layout_above="@+id/tv_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#4099FF"
        android:text="@string/more"
        android:layout_above="@+id/adView"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>
