<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.umutkina.findunfollowersapp.UnfListActivity">

    <TextView
        android:id="@+id/tv_header"
        android:background="#26517C"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="20sp"

        android:textColor="#FFFFFF"
        android:text="@string/unf_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_below="@+id/tv_header"
        android:id="@+id/lv_more"
        android:layout_above="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
<LinearLayout
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:id="@+id/ll_bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:text="@string/more"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_above="@+id/adView"
        android:background="#4099FF"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>


</LinearLayout>

</RelativeLayout>
