<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DCDCDC"
    tools:context=".VenueDetilForPointActivity">


    <TextView
        android:id="@+id/tv_header"
        android:background="#26517C"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:text="@string/app_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/tv_header"
        android:layout_above="@+id/ll_button"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:padding="12dp"
                android:textColor="#666666"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:text="@string/followers"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:text="@string/following"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:text="@string/unfollowers"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:text="@string/unfollowing"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
             android:background="@color/DarkSeaGreen"
                android:layout_weight="1"
                android:id="@+id/tv_followers_count"
                android:padding="12dp"
                android:textColor="#666666"
                android:textSize="16sp"
                android:gravity="center"
                android:text="---"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView


                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:id="@+id/tv_following_count"
                android:padding="12dp"
                android:gravity="center"
                android:text="---"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:id="@+id/tv_unfollowers_count"
                android:padding="12dp"
                android:gravity="center"
                android:text="---"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="16sp"
                android:id="@+id/tv_unfollowing_count"
                android:padding="12dp"
                android:gravity="center"
                android:text="---"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





        <TextView
            android:id="@+id/tv_show_unfollowers"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#4099FF"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/show_unfollowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_show_unfollowings"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#4099FF"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/show_unfollowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>