<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.umutkina.findunfollowersapp.MakeHashTagTweetActivity">

    <RelativeLayout
        android:id="@+id/rl_mention"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_below="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:id="@+id/rl_tv_et"
            android:layout_toLeftOf="@+id/tv_save_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="8dp"
                android:background="@color/Gray"
                android:visibility="gone"
                android:id="@+id/tv_mention"
                android:minLines="4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:hint="@string/enter_hash_for_mentioned_users"
                android:textSize="12sp"
                android:padding="8dp"
                android:inputType="text"
                android:singleLine="false"
                android:gravity="start"
                android:id="@+id/et_mention"
                android:maxLength="140"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </RelativeLayout>


        <TextView
            android:background="@color/pso_yellow"
            android:id="@+id/tv_save_edit"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:textColor="@color/White"
            android:layout_alignParentRight="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/rl_mention"
        android:id="@+id/rl_mention_mention"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:id="@+id/rl_tv_et_mention"
            android:layout_toLeftOf="@+id/tv_save_edit_mention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="8dp"
                android:background="@color/Gray"
                android:visibility="gone"
                android:id="@+id/tv_mention_mention"
                android:minLines="4"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText

                android:padding="8dp"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:gravity="start"
                android:hint="@string/mention_hint"
                android:id="@+id/et_mention_mention"
                android:maxLength="140"
                android:layout_width="match_parent"
                android:layout_height="140dp" />

        </RelativeLayout>


        <TextView
            android:background="@color/pso_yellow"
            android:id="@+id/tv_save_edit_mention"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:textColor="@color/White"
            android:layout_alignBottom="@+id/rl_tv_et_mention"
            android:layout_alignParentRight="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_hashtag"
        android:layout_above="@+id/tv_submit"
        android:layout_below="@+id/rl_mention_mention"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <TextView
        android:layout_above="@id/adView"
        android:background="@color/pso_yellow"
        android:id="@+id/tv_submit"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add"
        android:gravity="center"
        android:textColor="@color/White"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.gms.ads.AdView
        android:layout_alignParentBottom="true"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</RelativeLayout>
